// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Button /> > passes class names down properly 1`] = `
<button
  class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 exampleClassName"
  data-testid="example-class-name"
  type="button"
>
  <span
    class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
  >
    Click
  </span>
</button>
`;

exports[`<Button /> > passes test ids down properly 1`] = `
<button
  class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
  data-testid="example-test-id"
  type="button"
>
  <span
    class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
  >
    Click
  </span>
</button>
`;
